@startuml

!define DARKORANGE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

title __PRESENTATION's Class Diagram__\n

  namespace wasteless.server {
    namespace presentation {
      class wasteless.server.presentation.GroceryListController {
          + GroceryListController()
          + calculateWaste()
          + createGroceryList()
          + deleteGroceryList()
          + generateJsonReport()
          + generateTextReport()
          + getAllGroceryLists()
          + getGroceryListById()
          + updateGroceryList()
      }
       class wasteless.server.presentation.NotificationController {
                - template : SimpMessagingTemplate
                + onReceivedMessage()
                + propertyChange()
                + subscribeToWasterService()
                ~ NotificationController()
            }
    }

    namespace business {
          class wasteless.server.business.GroceryListService {
                   + GroceryListService()
                   + createGroceryList()
                   + deleteGroceryList()
                   + getAllGroceryLists()
                   + getGroceryListById()
                   + updateGroceryList()
               }
          class wasteless.server.business.WasteManagerService {
                    - support : PropertyChangeSupport
                    + WasteManagerService()
                    + addPropertyChangeListener()
                    + computeWasteDTO()
                    + notifyWasteLevels()
                    + removePropertyChangeListener()
                    - getTotalCalories()
                }
        }
  }
  


  wasteless.server.business.WasteManagerService o-- wasteless.server.business.GroceryListService : groceryListService

  

  wasteless.server.presentation.GroceryListController o-- wasteless.server.business.GroceryListService : groceryListService
  wasteless.server.presentation.GroceryListController o-- wasteless.server.business.WasteManagerService : wasteManagerService

  wasteless.server.presentation.NotificationController .up.|> java.beans.PropertyChangeListener
  wasteless.server.presentation.NotificationController o-- wasteless.server.business.WasteManagerService : wasteManagerService



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
